--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   --color-e52e2e: #e52e2e;
   --color-828599: #828599;
   --color-3d464d: #ed464d;
-  --color-c3d4da: #ced4da;
+  --color-ced4da: #ced4da;
 }
 
 .green {
@@ -24,7 +24,7 @@
 
 .form-control {
   box-shadow: none;
-  border-color: var(--color-c3d4da);
+  border-color: var(--color-ced4da);
 }
 .title {
   font: 28px;
