admin login integration

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@
   --color-828599: #828599;
   --color-3d464d: #ed464d;
   --color-ced4da: #ced4da;
+  --color-FFF1EE: #FFF1EE;
+  --color-FFDADA: #FFDADA;
+  --color-FFC1C1: #FFC1C1;
+  --color-fcfcfc: #fcfcfc;
+  --color-b76e79: #b76e79;
 }
 
 .green {
